# llm-wiki

./: .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  README.zh-CN.md  install.ps1  install.sh  pyproject.toml
.claude/: settings.json
.obsidian/: app.json
benchmark/: report.md  run_benchmark.py
docs/: AGENT-CONFIGURATION.md  AGENTS.md  ARCHITECTURE.md  EXPORTING.md  SETUP-COGNEE.md  STRUCTURE.md  USER-GUIDE.md  operating-model.md
integrations/: README.md
knowledge/: Ingestion Workflow.md  README.md  Retrieval Workflow.md  Review Workflow.md  index.md  log.md
memory/: AGENTS.md  index.md  log.md  operating-model.md
obsidian-web-clipper/: Article-to-Inbox.json
outputs/: README.md  product-requirements-ai-2026.md
raw/: README.md
rules/: output-files.md  raw-files.md  wiki-files.md
scripts/: agent_timeline.py  archive_daily.py  archive_stale.py  blackboard.py  bootstrap_project.py  bootstrap_qmd.py  build_advisory.py  build_context.py  build_guardrails.py  cleanup_worktrees.py  codex-memory-wrapper.ps1  codex_memory.py  cognee_sync.py  compile_memory.py  daily_log_append.py  export_vault.py  feedback_capture.py  flush_memory.py  graph_neighbors.py  heartbeat_record.py  install-scheduled-tasks.ps1  lint_memory.py  llm-wiki-memory-opencode.js  llm_client.py  lookup_mode.py  loop_detector.py  maintenance_helpers.py  maybe_compile.py  memory_queue.py  memory_state.py  merge_claude_settings.py  migrate_to_okf.py  okf_types.py  post_tool_capture.py  (+14 more)
(+143 files in other folders)
